--- a/L9/Views/Shared/_LeftMenu.cshtml
+++ b/L9/Views/Shared/_LeftMenu.cshtml
@@ -9,10 +9,10 @@
         <a href="/Category/AllCategories"><i class="fa fa-search"></i> All Categories</a>
     </li>
     <li class="list-group-item">
-        <a href="/Product/Create"><i class="fa fa-plus"></i> New Product</a>
+        <a href="/Products/Create"><i class="fa fa-plus"></i> New Product</a>
     </li>
     <li class="list-group-item">
-        <a href="/Product/AllProducts"><i class="fa fa-search"></i> All Products</a>
+        <a href="/Products/AllProducts"><i class="fa fa-search"></i> All Products</a>
     </li>
     <li class="list-group-item">
         <a>Logout</a>
