--- a/L9/Views/Category/AllCategories.cshtml
+++ b/L9/Views/Category/AllCategories.cshtml
@@ -3,34 +3,65 @@
 
 <h1>Total Categories: @Model.Count()</h1>
 
-    <div class="row">
-        <table class="table table-bordered table-hover table-striped">
-            <thead>
-                <tr>
-                    <th>
-                        ID
-                    </th>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Short Description
-                    </th>
-                    <th>
-                        Long Description
-                    </th>
-                    <th>
-                        Status
-                    </th>
-                    <th>
-                        Actions
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (Category C in Model)
-                {
-                    @*if (C.Status == "Active")
+@if (!string.IsNullOrEmpty(ViewBag.Message))
+{
+<div class="toast float-right" data-delay="10000" >
+    <div class="toast-header">
+        <div>
+            <h4>Alert!</h4>
+        </div>
+        <div class="float-right">
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
+    <div class="toast-body">
+        <p>@ViewBag.Message</p>
+    </div>
+</div>
+}
+
+
+@*<a href="#" data-toggle="modal" data-target="#myModal">Test Model Dialog</a>*@
+
+
+<form action="/Category/AllCategories" method="post">
+    <input type="text" id="SearchQuery" name="SearchQuery"/>
+    <input type="submit" value="Search"/>
+</form>
+
+
+
+
+<div class="row">
+    <table class="table table-bordered table-hover table-striped" id="MyTable" style="width:100%">
+        <thead>
+            <tr>
+                <th>
+                    ID
+                </th>
+                <th>
+                    Name
+                </th>
+                <th>
+                    Short Description
+                </th>
+                <th>
+                    Long Description
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                    Actions
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (Category C in Model)
+            {
+                @*if (C.Status == "Active")
                     {
                         <tr>
                             <td>
@@ -75,51 +106,87 @@
 
 
 
-                    string StatusClass = "";
+                string StatusClass = "";
 
-                    if (C.Status != "Active")
-                    {
-                        StatusClass = "table-danger";
-                    }
-
-
-                    <tr class="@StatusClass">
-                        <td>
-                            @C.Id
-                        </td>
-                        <td>
-                            @C.Name
-                        </td>
-                        <td>
-                            @C.ShortDescription
-                        </td>
-                        <td>
-                            @C.LongDescription
-                        </td>
-                        <td>
-                            @C.Status
-                        </td>
-                        <td>
-
-                            <a href="/Category/Detail?Id=@C.Id" class="btn btn-success btn-sm"><i class="fa fa-eye"></i> </a>
-                            <a href="/Category/Edit?Id=@C.Id" class="btn btn-warning btn-sm"><i class="fa fa-pencil"></i> </a>
-                            <a href="/Category/Delete?Id=@C.Id" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>  </a>
-
-
-
-                        </td>
-                    </tr>
-
-
-
+                if (C.Status != "Active")
+                {
+                    StatusClass = "table-danger";
                 }
-            </tbody>
-        </table>
-
-    </div>
 
 
-<div class="row">
+                <tr class="@StatusClass">
+                    <td>
+                        @C.Id
+                    </td>
+                    <td>
+                        @C.Name
+                    </td>
+                    <td>
+                        @C.ShortDescription
+                    </td>
+                    <td>
+                        @C.LongDescription
+                    </td>
+                    <td>
+                        @C.Status
+                    </td>
+                    <td>
+
+                        <a href="/Category/Detail?Id=@C.Id" class="btn btn-success btn-sm"><i class="fa fa-eye"></i> </a>
+                        <a href="/Category/Edit?Id=@C.Id" class="btn btn-warning btn-sm"><i class="fa fa-pencil"></i> </a>
+                        <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal-@C.Id"><i class="fa fa-trash"></i> </a>
+                       
+                        <div class="modal fade" id='myModal-@C.Id' tabindex="-1" role="dialog" aria-labelledby="myModal-label-@C.Id">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title" id="myModal-label-@C.Id">ARE YOU SURE?</h4>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Do you really want to delete '@C.Name' category?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                        <a href="/Category/Delete?Id=@C.Id" class="btn btn-primary">Yes Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </td>
+                </tr>
+
+
+
+            }
+        </tbody>
+    </table>
+
+</div>
+
+
+
+<div id="ForAd1">
+</div>
+
+<div id="ForAd2">
+   
+</div>
+
+
+
+
+
+
+
+
+
+
+
+@*<div class="row">
     @foreach (Category C in Model)
     {
         <div class="col-md-6">
@@ -134,15 +201,13 @@
                             <span class="badge badge-success float-right">@C.Id</span>
                         </div>
                     </div>
-                    
+
                 </div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-4">
-                            @*<img src="http://placehold.it/100x100/" alt="" />*@
+                           
 
-                            <img src="http://lorempixel.com/100/100/sports" alt="" />
-                                                       
                         </div>
                         <div class="col-md-8">
                             <p class="card-text">
@@ -155,7 +220,7 @@
                     </div>
 
 
-                    
+
                 </div>
                 <div class="card-footer text-center">
                     <a href="/Category/Detail?Id=@C.Id" class="btn btn-success btn-sm"><i class="fa fa-eye"></i> </a>
@@ -166,4 +231,31 @@
             </div>
         </div>
     }
-</div>
+</div>*@
+
+
+
+
+
+@section Scripts{ 
+
+    <script>
+        $(function () {
+
+            $('.toast').toast('show');
+
+            $('#MyTable').DataTable();
+
+
+
+            $('#ForAd1').load('/Category/LoadAd1');
+
+            $('#ForAd2').load('/Category/LoadAd2');
+
+        });
+    </script>
+
+
+
+
+}
