--- a/L9/Views/Shared/_Layout.cshtml
+++ b/L9/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css"/>
 
 </head>
 <body>
@@ -72,6 +72,9 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+   
+    <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    
     @RenderSection("Scripts", required: false)
 </body>
 </html>
