--- a/L9/Views/Category/Create.cshtml
+++ b/L9/Views/Category/Create.cshtml
@@ -14,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
 
             @Html.AntiForgeryToken()
 
@@ -35,6 +35,12 @@
                 <input asp-for="LongDescription" class="form-control" />
                 <span asp-validation-for="LongDescription" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label class="control-label">Category Image</label>
+                <input id="CImage" name="CImage" type="file" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
