EMAIL FLOW AND SMS FLOW

--- a/L9/Views/Products/Details.cshtml
+++ b/L9/Views/Products/Details.cshtml
@@ -9,70 +9,148 @@
 <div>
     <h4>Product</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ShortDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LongDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LongDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sku)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sku)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CurrentStock)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CurrentStock)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Images)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Images)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-    </dl>
+
+    <div class="row">
+        <div class="col-md-2">
+
+            @if (string.IsNullOrEmpty(Model.Images))
+            {
+                <img src="~/Images/ProductImages/ph.jpg" class="img-fluid img-thumbnail SmallImage" style="max-width:50px;" alt="Alternate Text" />
+            }
+            else
+            {
+                string[] AllImages = Model.Images.Split(',');
+
+                <div>
+                    @for (int i = 0; i < AllImages.Length; i++)
+                    {
+                        <img  src="~/Images/ProductImages/@AllImages[i]" data-imagepath="/Images/ProductImages/@AllImages[i]" class="img-fluid img-thumbnail mb-2 SmallImage" style="max-width:50px;" alt="Alternate Text" />
+                        <br />
+                    }
+                </div>
+            }
+        </div>
+
+        <div class="col-md-4" style="border:1px solid black;">
+
+            @if(string.IsNullOrEmpty(Model.Images))
+            {
+            <img id="LargeImage" name="LargeImage" src="~/Images/ProductImages/ph.jpg" alt="Alternate Text" />
+            }
+            else
+            {
+                string[] AllImages = Model.Images.Split(',');
+
+        <img id="LargeImage" name="LargeImage" src="~/Images/ProductImages/@AllImages[0]" alt="Alternate Text" />
+               
+
+            }
+
+
+        </div>
+
+        <div class="col-md-6">
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ShortDescription)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ShortDescription)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.LongDescription)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.LongDescription)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Sku)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Sku)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.CurrentStock)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.CurrentStock)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Status)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Status)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Images)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Images)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.CreatedDate)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.CreatedDate)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.CreatedBy)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.CreatedBy)
+                </dd>
+            </dl>
+
+            <div>
+                <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+                <a asp-action="Index">Back to List</a>
+            </div>
+        </div>
+
+
+
+    </div>
+
+    
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+
+@section Scripts{
+
+
+<script>
+    $(function(){
+    
+        $('.SmallImage').click(function () {
+
+            var ImagePath = $(this).data('imagepath');
+
+            $('#LargeImage').attr("src", ImagePath);
+
+        });
+
+
+
+
+
+
+    });
+
+
+</script>
+
+}
+
