--- a/L9/Views/Products/Create.cshtml
+++ b/L9/Views/Products/Create.cshtml
@@ -4,7 +4,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -105,7 +105,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Images" class="control-label"></label>
-                <input asp-for="Images" class="form-control" />
+                <input type="file" id="PImages" name="PImages" multiple/>
                 <span asp-validation-for="Images" class="text-danger"></span>
             </div>
             <div class="form-group">
